--- a/index.html
+++ b/index.html
@@ -8,7 +8,37 @@
     <title>Git Bash</title>
 </head>
 <body>
-    <h1>Amar sonar bangla Ami toamy valo bashi ciro</h1>
-    <h2>Ami tomake onek valo bashi </h2>
+   <header>
+      <div class="div-text">
+         <div>
+                <h2>My first <span class="text-design">web-Site design</span> </h2>
+          </div>
+          <div>
+             <h2>web-development <span class="text-design">Shuvo Roy</span> </h2>   
+         </div>
+         </div>
+   </header>
+
+   <main>
+    <section>
+        <div class="one-pent">
+            <div class="one">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi maiores ex nostrum dicta impedit sapiente, fuga expedita iusto unde recusandae.</p>
+            </div>
+            <div class="one">
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempore dolor quod dicta quis animi voluptate quia commodi nulla, assumenda perspiciatis, nihil facilis! Sequi voluptatem nisi debitis maiores illum voluptas.</p>
+    
+            </div>
+            <div class="one">
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempore dolor quod dicta quis animi voluptate quia commodi nulla, assumenda perspiciatis, nihil facilis! Sequi voluptatem nisi debitis maiores illum voluptas.</p>
+            </div>
+        </div>
+       </section>
+
+   </main>
+   
 </body>
 </html>
