--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
             </div>
         </div>
        </section>
+       <div class="form-div">
+            <h1>Login Form</h1>
+            <form class="form-one" action="">
+                <label for="Fast-Name">Fast-Name:</label>
+                <input type="text" name="" id="Fast-Name" placeholder="Fast-Name" required><br><br>
+                <label for="Last-Name">Last-Name</label>
+                <input type="text" name="Last-Name" id="Last-Name"><br><br>
+                <input class="boton" type="submit" value="Submit">
+            </form>
+       </div>
 
    </main>
    
